feat: user balance app
