# app/controller/user.go
@@ -1,16 +1,19 @@
 package controller
 
 import (
+	"github.com/hafidzhz/ihsansolusi-test/app/dto"
+	"github.com/hafidzhz/ihsansolusi-test/app/repository"
+	"github.com/hafidzhz/ihsansolusi-test/pkg/validator"
+	"github.com/hafidzhz/ihsansolusi-test/platform/logger"
+
 	"github.com/gofiber/fiber/v2"
-	"github.com/hrshadhin/fiber-go-boilerplate/app/dto"
-	"github.com/hrshadhin/fiber-go-boilerplate/app/repository"
-	"github.com/hrshadhin/fiber-go-boilerplate/pkg/validator"
-	"github.com/hrshadhin/fiber-go-boilerplate/platform/logger"
 )
 
 type UserController interface {
 	RegisterUser(c *fiber.Ctx) error
+	GetUser(c *fiber.Ctx) error
 	Deposit(c *fiber.Ctx) error
+	Withdraw(c *fiber.Ctx) error
 }
 
 type userController struct {
@@ -112,7 +115,7 @@ func (controller *userController) Deposit(c *fiber.Ctx) error {
 // @Param withdrawRequest body dto.WithdrawRequest true "Withdraw money to user account"
 // @Success 200 {object} dto.User status "Ok
 // @Failure 400,401,403,500 {object} ErrorResponse "Error"
-// @Router /tabung [post]
+// @Router /tarik [post]
 func (controller *userController) Withdraw(c *fiber.Ctx) error {
 	request := &dto.DepositRequest{}
 
@@ -141,4 +144,36 @@ func (controller *userController) Withdraw(c *fiber.Ctx) error {
 	return c.JSON(fiber.Map{
 		"user": dto.ToUser(user),
 	})
+}
+
+// GetUser gets the user balance.
+// @Description Retrieves user balance based on account number.
+// @Summary Get user balance
+// @Tags User
+// @Accept json
+// @Produce json
+// @Param accountNumber path string true "Account number to fetch user balance"
+// @Success 200 {object} map[string]float64 "Balance"
+// @Failure 400,401,403,500 {object} ErrorResponse "Error response with corresponding status"
+// @Router /saldo/{accountNumber} [get]
+func (controller *userController) GetUser(c *fiber.Ctx) error {
+	accountNumber := c.Params("accountNumber")
+	if accountNumber == "" {
+		return c.Status(fiber.StatusBadRequest).JSON(fiber.Map{
+			"msg": "Account number is required",
+		})
+	}
+
+	user, err := controller.repository.ResolveByAccountNumber(accountNumber)
+	if err != nil {
+		logger.GetLogger().Errorf("[Withdraw] failed withdraw from user, error: %s", err)
+		return c.Status(fiber.StatusInternalServerError).JSON(fiber.Map{
+			"msg": err.Error(),
+		})
+	}
+
+	return c.JSON(fiber.Map{
+		"balance": user.Balance,
+	})
+
 }
